[package]
name = "stream-deck-plugin"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "A quick wrapper to make it easier to develop stream deck plugins in rust."
readme = "README.md"
homepage = "https://github.com/AndreasOM/stream-deck-plugin"
repository = "https://github.com/AndreasOM/stream-deck-plugin"
keywords = ["tools", "libraries", "streamdeck"]
categories = ["multimedia"]

[dependencies]
color-eyre = "0.6.3"
futures-util = { version = "0.3.30", features = ["futures-sink", "sink"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "time", "sync", "macros"] }
tokio-tungstenite = "0.21.0"
tracing = "0.1.40"
tungstenite = "0.21.0"
url = "2.5.0"
